@@ -24,6 +24,14 @@
 2008-12-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
+        sample RGB images.
+
+</UL>
+<p>
+2008-12-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
   <LI> version.sh: GraphicsMagick 1.3.3 released.
   <LI> NEWS.txt: Updated news for release.
 
