@@ -1,5 +1,10 @@
 2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
+	sample RGB images.
+
+2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
 	* version.sh: GraphicsMagick 1.3.3 released.
 	* NEWS.txt: Updated news for release.
 
